# fungus

./: .gitignore  Cargo.toml  README.md  dockerfile
.cargo/: config.toml
src/: actual_ui.rs  lib.rs  main.rs  playback.rs  samples.rs  sequencer.rs  test_ui.rs  ui.rs
src/actual_ui/: button.rs  rotary.rs
