[package]
name = "fungus"
version = "0.1.0"
edition = "2021"

[dependencies]
kira = "0.7.1"
spin_sleep = "1.1.1"

# raspberrypicels dont get curses
[target.'cfg(target_arch = "x86_64")'.dependencies]
pancurses = "0.17"

# this is for when i compile on the pi zero, it takes forever
[target.arm-unknown-linux-gnueabihf.dependencies]
rppal="0.14.1"

# you can cross compile to this one tho
[target.armv7-unknown-linux-gnueabihf.dependencies]
rppal="0.14.1"
